--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Banana Store</title>
+  <title>PL*NETZ(0)N</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 
-<header id="logo">
-  <h1>Welcome to the Banana Store</h1>
+<header>
+<img src="http://www.heyelevator.com/acltc/planetzon.jpg" class="logo">
 </header>
 
-<ul class="nav nav-pills">
-  ...
-  <li role="presentation" class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-      Dropdown <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      ...
-    </ul>
-  </li>
-  ...
-</ul>
+<div class="jumbotron">
+  <h1></h1>
+</div>
+
+<nav>
+  <ul>
+    <li><a href="/products">Shop</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
+    <li><a href="/products/new">New</a></li>
+  </ul>
+</nav>
+
+
+
+
 <body>
 
 <%= yield %>
