--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,9 @@
-<div id="box">
-<img src=<%= @product.image %> alt=<%= @product.name %> >
-  <div id="text"
-    <h1><%= @product.name %></h1>
-  <p><%= @product.description %></p>
-    <p><a href="/products/<%= @product.id %>">Edit</a></p>
+
+  <img src=<%= @product.image %> alt=<%= @product.name %> >
+  <div id="text">
+    <h3><%= @product.name %></h3>
+    <p><%= @product.description %></p>
+    <p>$ <%= @product.price %></p>
+    <p><%= link_to "Edit", "/products/#{@product.id}/edit" %>
+      <%= link_to "Delete", "/products/#{@product.id}", method: :delete, data:{confirm: "Are You Sure"} %> </p>
   </div>
-</div>
