--- a/app/views/products/update.html.erb
+++ b/app/views/products/update.html.erb
@@ -2,6 +2,9 @@
 <img src=<%= @product.image %> alt=<%= @product.name %> >
   <div id="text"
     <h1><%= @product.name %></h1>
-  <p><%= @product.description %></p>
+    <p><%= @product.description %></p>
+    <p>$ <%= @product.price %></p>
+
+    <p> Your Product has been updated. </p>
   </div>
 </div>
