--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,7 @@
-
+<div id="show_image">
   <img src=<%= @product.image %> alt=<%= @product.name %> >
+</div>
+
   <div id="text">
     <h3><%= @product.name %></h3>
     <p><%= @product.description %></p>
