--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,8 +1,12 @@
 body {
   font-family: Futura,"Trebuchet MS",Arial,sans-serif;
-  background-image: url("ignasi_pattern_s.png");
+  background-image: url("swirl_pattern.png");
   background-color: black;
   margin-top: 0px;
+}
+
+h6 {
+  color: white;
 }
 
 .col-fixed {
