--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
 <div id="box">
 
-<div id="text">
+<div id="show-text">
 
 <h1>Update</h1>
 
@@ -21,9 +21,14 @@
     <%=text_field_tag :image, @product.image %>
   </div>
 
-   <div>
+  <div>
     <%=label_tag :description %>
     <%=text_field_tag :description, @product.description %>
+  </div>
+
+  <div>
+    <%=label_tag :in_stock %>
+    <%=radio_button_tag(:in_stock, "Yes") %>
   </div>
 
   <%= submit_tag "Send" %>
