--- a/app/views/products/index2.html.erb
+++ b/app/views/products/index2.html.erb
@@ -1,13 +1,9 @@
 
-<div class="container">
-<div class="row">
-  <div class="col-md-6">
+    <ul class="gal">
     <% @products.each do |product| %>
-        <a href="products/<%= product.id %>"><img src=<%= product.image %> alt=<%= product.name %> > </a>
+        <a href="products/<%= product.id %>"><li><img src=<%= product.image %> alt=<%= product.name %> > </a>
         <h3><%= product.name %></h3>
         <p><%= product.description %></p>
-        <h4>$ <%= product.price %></h4>
+        <h4>$ <%= product.price %></h4></li>
     <% end %>
-    </div>
-</div>
-</div>
+    </ul>
