--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: Futura,"Trebuchet MS",Arial,sans-serif;
+  font-family: Geneva,Tahoma,Verdana,sans-serif;
   background-image: url("swirl_pattern.png");
   background-color: black;
   margin-top: 0px;
