--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -1,25 +1,16 @@
-<div class="container">
-
-
-  <div class="row">
-
-
-    <% @products.each do |product| %>
-
-
-      <div class="col-md-3 col-fixed">
-
-
-        <a href="products/<%= product.id %>"><img src=<%= product.image %> alt=<%= product.name %> ></a>
-          <h3><%= product.name %></h3>
-          <p><%= product.description %></p>
-          <p><a href="#" class="btn btn-primary" role="button">Buy: $<%= product.price %></a> <a href="#" class="btn btn-default" role="button">More Details</a></p>
-
-      </div>
-    <% end %>
+  <div class="container">
+    <nav class="splash">
+      <a href="about">About</a>
+      <a href="/products">Store</a>
+      <a href="/products/new">New</a>
+    </nav>
+    <h1>
+      Periscope
+    </h1>
+    <span class="headline">
+      Explore the world through someone else's eyes.
+    </span>
   </div>
-
-</div>
 
 
 
