Adding Supplier and Image models

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,15 @@
 <nav>
   <ul>
     <li><a class="none" href="/products">Shop</a></li>
-    <li><a class="none" href="/about">About</a></li>
-    <li><a class="none" href="/contact">Contact</a></li>
+    <!-- <li><a class="none" href="/about">About</a></li>
+    <li><a class="none" href="/contact">Contact</a></li> -->
+    <li><a class="none" href="/products?sort_up=price">Sort Up</a></li>
+    <li><a class="none" href="/products?sort_down=price">Sort Down</a></li>
+    <li><a class="none" href="/products?discount=10.00">Discount</a></li>
+    <li><a class="none" href="/products?random=id">Random</a></li>
+
     <li><a class="none" href="/products/new">New</a></li>
+
   </ul>
 </nav>
 
