--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
 
       <div class="col-md-3 col-fixed">
 
-        <a href="products/<%= product.id %>"><img src=<%= product.image %> alt=<%= product.name %> ></a>
+       <a href="products/<%= product.id %>"><img src=<%= product.images[0].image %> alt=<%= product.name %> ></a>
           <h3><%= product.name %></h3>
           <p><%= product.description %></p>
           <p><a href="products/<%= product.id %>" class="btn btn-primary" role="button"><%= product.price_display %></a> <a href="https://en.wikipedia.org/wiki/<%= product.name %>_(planet)" class="btn btn-default" role="button">More Details</a></p>
@@ -14,5 +14,12 @@
       </div>
     <% end %>
   </div>
+
+<%= form_tag "/search", class: "navbar-form navbar-left" do %>   
+<%= text_field_tag :search, nil, placeholder: "Search Products" %>
+<%= submit_tag "Search Galaxy!!!" %>
+<% end %>
+
+
 
 </div>
