--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,20 @@
-<div id="show_image"><img src=<%= @product.image %> alt=<%= @product.name %> ></div>
+<div id="show_image">
+<% @product.images.each do |image| %>
+
+<img src=<%= image.image %> >
+
+<% end %>
+</div>
 
   <div id="show-text">
 
     <h3><%= @product.name %></h3>
     <p><%= @product.description %></p>
-    <p>Price: <%= @product.price_display %></p>
+    <p>Price: <%= number_to_currency(@product.price) %></p>
     <p>Tax: <%= @product.tax %></p>
     <p>------------------------</p>
     <h4>Total: <%= @product.total %></h4>
+    <h4>Supplier Name: <%= @product.supplier.name %></h4>
     <h4><%= @product.in_stock? %></h4>
     
     <% if @product.in_stock %>
