--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -6,17 +6,17 @@
 
 <%=form_tag '/images', method: :post do %>
 
-  <div>
+  <div class="input-group">
     <%=label_tag :product_id %>
-    <%=text_field_tag :product_id %>
+    <%=text_field_tag :product_id, @product.id, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="input-group">
     <%=label_tag :image %>
-    <%=text_field_tag :image %>
+    <%=text_field_tag :image, nil, class: "form-control" %>
   </div>
 
-  <%= submit_tag "Send" %>
+  <%= submit_tag "Send", class: "input-group btn btn-default" %>
 
   <% end %>
   </div>
