--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div id="show_image">
     <% @product.images.each do |image| %>
-        <img src="<%= image.image %>" >
+        <img src="<%= image.image %>" class="img-responsive">
     <% end %>
 </div>
 
