--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -44,7 +44,8 @@ nav {
   padding: 10px;
   margin: auto;
   background: #4D4D4D; 
-  font-size: 15px;
+  font-size: 12px;
+  color: #98C0CC;
 }
 
 nav ul {
@@ -80,7 +81,7 @@ nav a.selected, nav a:hover {
 
 #box {
   background-color: gray;
-  background-image: url("dark_embroidery.png");
+  // background-image: url("dark_embroidery.png");
   margin: auto;
   max-width: 800px;
 }
@@ -157,4 +158,5 @@ PAGE: SHOW ALL (No Bootstrap)
   display: block;
   margin: auto;
 }
+
 
