--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -18,6 +18,13 @@ h6 {
   max-height: 525px;
 }
 
+.col-fixed-2 {
+  background-color: white;
+  margin: 25px 50px;
+  min-width: 300px;
+  max-width: 300px;
+}
+
 /* centered columns styles */
 .row-centered {
     text-align: center;
@@ -30,4 +37,8 @@ h6 {
     text-align: left;
     /* inline-block space fix */
     margin-right: -4px;
+}
+
+.input-group {
+  padding: 5px;
 }
