--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,28 +6,28 @@
 
 <%=form_tag '/products', method: :post do %>
 
-  <div>
+  <div class="input-group">
     <%=label_tag :name %>
-    <%=text_field_tag :name %>
+    <%=text_field_tag :name, nil, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="input-group">
     <%=label_tag :price %>
-    <%=text_field_tag :price %>
+    <%=text_field_tag :price, nil, class: "form-control" %>
+  </div>
+
+  <div class="input-group">
+  <p>Supplier: </p> <%= collection_select :supplier, :supplier_id, Supplier.all, :id, :name, class: "form-control" %>
+  </div>
+
+  <div class="input-group">
+    <%=label_tag :description %>
+    <%=text_field_tag :description, nil, class: "form-control" %>
   </div>
 
   <div>
-    <%=label_tag :image %>
-    <%=text_field_tag :image %>
+    <%= submit_tag "Send", class: "input-group btn btn-default"%>
   </div>
-
-   <div>
-    <%=label_tag :description %>
-    <%=text_field_tag :description %>
-  </div>
-
-  <%= submit_tag "Send" %>
-
   <% end %>
-  </div>
-  </div>
+</div>
+</div>
