--- a/app/views/products/update.html.erb
+++ b/app/views/products/update.html.erb
@@ -1,6 +1,6 @@
 <div id="box">
 <img src=<%= @product.image %> alt=<%= @product.name %> >
-  <div id="text"
+  <div id="text">
     <h1><%= @product.name %></h1>
     <p><%= @product.description %></p>
     <p>$ <%= @product.price %></p>
