--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,11 +1,12 @@
 <div id="show-text">
 <h3> Thank you for your Order! </h3>
 <p> Product: <%= @order.product.name %> </p>
-<%= image_tag @order.product.images[0].image %>
+<p><%= image_tag @order.product.images[0].image %></p>
 <p> Purchased by: <%= @order.user.email %> at <%= @order.friendly_time %></p>
 <p> Quantity: <%= @order.quantity %> </p>
-<p> Subtotal: <%= @order.subtotal %> </p>
-<p> Total Price: <%= @order.total %> </p>
+<p> Unit Price: <%= number_to_currency(@order.product.price) %> </p>
+<p> Subtotal: <%= number_to_currency(@order.subtotal) %> </p>
+<p> Total Price: <%= number_to_currency(@order.total) %> </p>
 <p> Amount left in stock: <%= @order.product.inventory %>
 <p> Thanks! </p>
 
