--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,53 +8,53 @@
     <%= csrf_meta_tags %>
   </head>
 
+  <!-- NAVAGATION BAR -->
+
   <header>
-    <img src="http://www.heyelevator.com/acltc/planetzon.jpg" class="logo">
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <a class="navbar-brand" href="/">
+            <img alt="Brand" src="http://www.heyelevator.com/acltc/planet_logo.jpg" class="logo">
+          </a>
+          <li><a href="/">shop</a></li>
+          <% if current_user %>
+            <li><a href="/">[signed in as: <%= current_user.email %>]</a></li>
+            <li><%= link_to "sign out", "/users/sign_out", method: :delete %></li>
+          <% else %>
+            <li><a href="/users/sign_in">log in</a></li>
+            <li><a href="/users/sign_up">sign up</a></li>
+          <% end %>  
+            <li><a href="/products?discount=10.00">discount</a></li>
+            <li><a href="/products?random=id">random</a></li>
+          <% if current_user %>
+            <li><a href="/products/new">new</a></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
   </header>
 
-  <div class="jumbotron">
-    <h1></h1>
-  </div>
-
-  <nav>
-    <ul>
-      <li><a class="none" href="/products">Shop</a></li>
-      <!-- <li><a class="none" href="/about">About</a></li>
-      <li><a class="none" href="/contact">Contact</a>< /li> -->
-      <% if current_user %>
-        <li><%= current_user.email %></li>
-        <li><%= link_to "Sign Out", "/users/sign_out", method: :delete %></li>
-      <% else %>
-        <li><a href="/users/sign_in">Log In</a></li>
-        <li><a href="/users/sign_up">Sign Up</a></li>
-      <% end %>  
-      <li><a class="none" href="/products?sort_down=price">Sort Down</a></li>
-      <li><a class="none" href="/products?discount=10.00">Discount</a></li>
-      <li><a class="none" href="/products?random=id">Random</a></li>
-      <li><a class="none" href="/products/new">New</a></li>
-
-    </ul>
-  </nav>
-
   <body>
-    <div id="box">
-      <div class="container">
-        <% flash.each do |name, message| %>
-          <div class="alert alert-<%= name %> alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <%= message %>
-          </div>
 
-        <% end %>
-      </div>
+  <!-- FLASH MESSAGE -->
+
+    <div class="container">
+      <% flash.each do |name, message| %>
+        <div class="alert alert-<%= name %> alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%= message %>
+          </div>
+      <% end %>
+    </div>
+
+    <!-- MAIN BODY -->
+
       <div class="container">
 
         <%= yield %>
 
       </div>
-    </div>
-    <nav>
-      <h6> Thanks for shopping celestial bodies at Pl*netZ(0)n! </h6>
-    </nav>
+
   </body>
 </html>
