--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,34 +1,38 @@
-<div id="box">
+<div class="container">
 
-<div id="show-text">
+  <h1>Update a product</h1>
 
-<h1>Update</h1>
+    <div class="form">
 
-<%=form_tag "/products/#{@product.id}", method: :patch do %>
+      <%=form_tag "/products/#{@product.id}", method: :patch do %>
 
-  <div class="field">
-    <%=label_tag :name %>
-    <%=text_field_tag :name, @product.name %>
-  </div>
+        <div class="input-group">
+          <%=label_tag :name %>
+          <%=text_field_tag :name, @product.name %>
+        </div>
 
-  <div class="field">
-    <%=label_tag :price %>
-    <%=text_field_tag :price, @product.price %>
-  </div>
+        <div class="input-group">
+          <%=label_tag :price %>
+          <%=text_field_tag :price, @product.price %>
+        </div>
 
-  <div class="field">
-    <%=label_tag :description %>
-    <%=text_field_tag :description, @product.description %>
-  </div>
+        <div class="input-group">
+          <%=label_tag :description %>
+          <%=text_field_tag :description, @product.description %>
+        </div>
 
 
-  <div class="field">
-    <%=label_tag :inventory %>
-    <%=text_field_tag :inventory, @product.inventory %>
-  </div>
+        <div class="input-group">
+          <%=label_tag :inventory %>
+          <%=text_field_tag :inventory, @product.inventory %>
+        </div>
 
-  <%= submit_tag "Send" %>
+        <div>
+          <%= submit_tag "Send", class: "btn btn-default" %>
+        </div>
 
-  <% end %>
-  </div>
-  </div>
+      <% end %>
+
+    </div>
+
+</div>
