--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,36 @@
 
 <div id="show_image">
-    <div class="row">
-        <% @product.images.each do |image| %>
-            <div class="col-sm-6">
-                <img src="<%= image.image %>" class="img-responsive">
-            </div>
-        <% end %>
-    </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+     <!-- Indicators -->
+     <ol class="carousel-indicators">
+       <% @product.images.each_with_index do |image, index| %>
+         <li data-target="#myCarousel" data-slide-to="<%= index + 1 %>" class="<%= index == 0 ? 'active' : ''%>">
+         </li>
+       <% end %>
+     </ol>
+
+     <!-- Wrapper for slides -->
+     <div class="carousel-inner">
+       <% @product.images.each_with_index do |image, index| %>
+         <div class="<%= index == 0 ? 'item active' : 'item' %>">
+           <%= image_tag image.image, class: "center" %>
+           <!-- <div class="carousel-caption">
+                 ...
+               </div> -->
+         </div> 
+       <% end %>      
+     </div>
+
+     <!-- Carousel Controls -->
+     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+       <span class="sr-only">Previous</span>
+     </a>
+     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+       <span class="sr-only">Next</span>
+     </a>
+   </div>
 </div>
 
 <div id="show-text">
