--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <li><a href="/users/sign_up">sign up</a></li>
           <% end %>  
 
-            <!-- CATEGORY FILTER -->
+            <!-- CATEGORY / FILTER DROP DOWN MENU -->
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">filter</a>
@@ -37,10 +37,12 @@
               <% end %>
 
               <li><a href="/products?discount=10.00">discount</a></li>
-              <% if current_user %>
-                <li><a href="/products/new">new</a></li>
-              <% end %>
               </ul>
+            </li>
+
+          <% if current_user %>
+            <li><a href="/products/new">new</a></li>
+          <% end %>
 
           <%= form_tag "/search", class: "navbar-form navbar-left" do %>   
           <%= text_field_tag :search, nil, placeholder: "Search Products" %>
